@@ -5,6 +5,9 @@ Fixed bugs:
 * When trying to migrate a file system from CryFS 0.9.3 or older, show an error message suggesting to first open it with 0.9.10 because we can't load that anymore.
 * The '--unmount-idle' parameter works again
 
+Compatibility:
+* Use libunwind instead of libbacktrace to build stack traces. This fixes a segfault issue with platforms using libexecinfo and is generally more portable.
+
 Other:
 * Updated to crypto++ 8.1
 
